@@ -111,7 +111,7 @@ public final class ExampleServlet extends CopsServlet
 			if(request.getParameter(START_SESSION)!=null)
 			{
 				request.getSession();
-				response.sendRedirect(cop.toStringNonEncoded());
+				response.sendRedirect(cop.toString());
 				return;
 			}
 			else if(request.getParameter(REPORT_EXCEPTION)!=null)
