@@ -155,68 +155,57 @@ public class CopTest extends TestCase
 		{
 			final TestCop cop = new TestCop();
 			assertEquals("/contextPath/servletPath/encoded(test.html)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(test.html)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(test.html)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop("ding");
 			assertEquals("/contextPath/servletPath/encoded(test.html?param1=ding)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(test.html?param1=ding)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(test.html?param1=ding)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop("ding", "dong");
 			assertEquals("/contextPath/servletPath/encoded(test.html?param1=ding&param2=dong)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(test.html?param1=ding&param2=dong)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(test.html?param1=ding&param2=dong)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop(0.0, "shop/hallo.html");
 			assertEquals("/contextPath/servletPath/encoded(shop/hallo.html)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(shop/hallo.html)", cop.toStringNonEncoded());
 		}
 		{
 			final String ding = "slash/semi;question?amp&uuml\u00fcgarten#";
 			final String dingenc = "slash%2Fsemi%3Bquestion%3Famp%26uuml%C3%BCgarten%23";
 			final TestCop cop = new TestCop(ding, "dong");
 			assertEquals("/contextPath/servletPath/encoded(test.html?param1=" + dingenc + "&param2=dong)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(test.html?param1=" + dingenc + "&param2=dong)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(test.html?param1=" + dingenc + "&param2=dong)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop(new String[]{"dir1"});
 			assertEquals("/contextPath/servletPath/encoded(dir1/test.html)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(dir1/test.html)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(dir1/test.html)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop(new String[]{"dir1"}, "dong");
 			assertEquals("/contextPath/servletPath/encoded(dir1/test.html?param1=dong)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(dir1/test.html?param1=dong)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(dir1/test.html?param1=dong)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop(new String[]{"dir1"}, "dong", "ding");
 			assertEquals("/contextPath/servletPath/encoded(dir1/test.html?param1=dong&param2=ding)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(dir1/test.html?param1=dong&param2=ding)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(dir1/test.html?param1=dong&param2=ding)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop(new String[]{"dir1", "dir2 /;\u00e4"});
 			assertEquals("/contextPath/servletPath/encoded(dir1/dir2/test.html)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(dir1/dir2/test.html)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(dir1/dir2/test.html)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop(new String[]{"dir1", "dir2 /;\u00e4"}, "dong");
 			assertEquals("/contextPath/servletPath/encoded(dir1/dir2/test.html?param1=dong)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(dir1/dir2/test.html?param1=dong)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(dir1/dir2/test.html?param1=dong)", cop.toAbsolute());
 		}
 		{
 			final TestCop cop = new TestCop(new String[]{"dir1", "dir2 /;\u00e4"}, "dong", "ding");
 			assertEquals("/contextPath/servletPath/encoded(dir1/dir2/test.html?param1=dong&param2=ding)", cop.toString());
-			assertEquals("/contextPath/servletPath/encoded(dir1/dir2/test.html?param1=dong&param2=ding)", cop.toStringNonEncoded());
 			assertEquals("scheme://host.exedio.com/contextPath/servletPath/encoded(dir1/dir2/test.html?param1=dong&param2=ding)", cop.toAbsolute());
 		}
 		{
