@@ -10,5 +10,6 @@ The items are sorted inversely, i.e. lastest items are on top
 * cleanup of cops url generation
   THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE !
   - Cop.toString() does not xml-encode anymore (& to &amp etc.)
+  - removed Cop.toStringNonEncoded()
 * updated jspm library to build.14, added getlib.properties and check.version target to getlib.xml
 
